Declare that recovery, pnacl, and swiftshader components do not require encryption.

BUG=640276

Review-Url: https://codereview.chromium.org/2276693002
Cr-Commit-Position: refs/heads/master@{#413822}

Former-commit-id: aac4b78ea7d23bbc86f1c9c3b588163a093d68bb