chrome/browser/component_updater/recovery_component_installer.cc
@@ -233,6 +233,7 @@ void RecoveryRegisterHelper(ComponentUpdateService* cus, PrefService* prefs) {
   recovery.version = version;
   recovery.pk_hash.assign(kSha2Hash, &kSha2Hash[sizeof(kSha2Hash)]);
   recovery.supports_group_policy_enable_component_updates = true;
+  recovery.requires_network_encryption = false;
   if (!cus->RegisterComponent(recovery)) {
     NOTREACHED() << "Recovery component registration failed.";
   }
